[gd_scene load_steps=19 format=3 uid="uid://ck8y35ctgyfxp"]

[ext_resource type="Script" uid="uid://dh6yesmiaoy48" path="res://PreScenes/Bullet/bullet.gd" id="1_bhihf"]
[ext_resource type="Texture2D" uid="uid://b4mn0cfnnceh0" path="res://Assets/Others/All_Fire_Bullet_Pixel_16x16_00.png" id="1_gls1f"]
[ext_resource type="Texture2D" uid="uid://doh7facv0yn6k" path="res://Assets/Others/explosion-1.png" id="3_olleq"]
[ext_resource type="AudioStream" uid="uid://ed560t7wn4h8" path="res://Assets/Sounds/Hit Sound.wav" id="4_vkgxb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5v2c7"]
atlas = ExtResource("1_gls1f")
region = Rect2(416, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jco5f"]
atlas = ExtResource("1_gls1f")
region = Rect2(432, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hjka"]
atlas = ExtResource("1_gls1f")
region = Rect2(448, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r570l"]
atlas = ExtResource("1_gls1f")
region = Rect2(464, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_igxr1"]
atlas = ExtResource("3_olleq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1luui"]
atlas = ExtResource("3_olleq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqtof"]
atlas = ExtResource("3_olleq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7smem"]
atlas = ExtResource("3_olleq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj4ac"]
atlas = ExtResource("3_olleq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c854"]
atlas = ExtResource("3_olleq")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x26eu"]
atlas = ExtResource("3_olleq")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jte17"]
atlas = ExtResource("3_olleq")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0fw4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v2c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jco5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hjka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r570l")
}],
"loop": true,
"name": &"bullet",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igxr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1luui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqtof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7smem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj4ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c854")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x26eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jte17")
}],
"loop": false,
"name": &"impact",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n3p6r"]
radius = 5.0
height = 18.0

[node name="Bullet" type="Area2D" groups=["bulletplayer"]]
z_index = -1
collision_layer = 8
collision_mask = 7
script = ExtResource("1_bhihf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_k0fw4")
animation = &"impact"
autoplay = "bullet"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
shape = SubResource("CapsuleShape2D_n3p6r")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, 14)
rotation = -1.5708
scale = Vector2(0.25, 0.25)

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vkgxb")
volume_db = -22.97

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
